# dsmrd

./: .gitignore  Cargo.toml
src/: appdata.rs  endpoints.rs  main.rs  reader.rs  udp_sender.rs
