[package]
name = "dsmrd"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.94"
log = "0.4.17"
env_logger = "0.10.0"

"dsmr5" = "0.2.2"
"serial" = "0.4"
"serial-unix" = "0.4"
event-listener = "5.3.1"
url = "2.5.2"
